[package]
name = "autotoken"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
solana-account = "3.3.0"
solana-client = "3.1.5"
solana-keypair = "3.1.0"
solana-program = "3.0.0"
solana-pubkey = "4.0.0"
solana-sdk = "3.0.0"
solana-signer = "3.0.0"
solana-transaction = "3.0.2"
spl-token-2022-interface = "2.1.0"
anyhow = "1.0.100"
spl-token-2022 = "10.0.0"
solana-commitment-config = "3.1.0"
solana-system-interface = { version = "3.0.0", features = ["bincode"] }
spl-token-metadata-interface = "=0.8.0"
spl-associated-token-account-interface = "2.0.0"
solana-program-pack = "3.0.0"
tokio = { version = "1.48.0", features = ["full"] }
spl-pod = "0.7.1"